--- a/src/main/java/bonifyAppAutomation/bonifyAutomationApp/Configuration/config.properties
+++ b/src/main/java/bonifyAppAutomation/bonifyAutomationApp/Configuration/config.properties
@@ -2,11 +2,11 @@ url = https://my.bonify.de/
 
 browser= Firefox
 
-email_id= test@gm.com
+email_id= Challenge@gm.com
 
 user_password_negative_value = Te@12
 
-correct_user_password =Tese@ab1
+correct_user_password =Test@123
 
 forget_password_URL = https://my.bonify.de/recover/send-email
 
